change something so when the average level is anything below zero it will default back to the middle between min and max level